kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: nginx-deployment-network
 namespace: homework
 labels:
   app: nginx
spec:
 replicas: 3
 selector:
   matchLabels:
     app: nginx
 template:
   metadata:
     labels:
       app: nginx
   spec:
    containers:
    - name: nginx
      image: nginx
      ports:
      - containerPort: 80
      volumeMounts:
        - name:  shared-volume
          mountPath: /homework
        - name: nginx-conf
          mountPath: /etc/nginx
          readOnly: true
      lifecycle:
        preStop:
          exec:
            command: ["/bin/sh","-c","rm /homework/index.html"]
      readinessProbe:
          exec:
              command:
              - sh
              - -c
              - ls /homework/index.html
    nodeSelector:
        homework: "true" 
    volumes:
    - name: shared-volume
      emptyDir: {}
    - name: nginx-conf
      configMap:
        name: nginx-config
        items:
         - key: nginx.conf
           path: nginx.conf
 strategy:
   type: RollingUpdate
   rollingUpdate:
     maxUnavailable: 1
